用户登录接口增加信息；新增改昵称接口
